--- a/gin-shop-vue/package.json
+++ b/gin-shop-vue/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vant/area-data": "^1.1.3",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "js-md5": "^0.7.3",
